@@ -447,6 +447,14 @@
       <TD class="style9">Indicator of an imported map or point drawn on one</TD>
     </TR>
     <TR VALIGN="top">
+      <TD>RegisteredToID</TD>
+      <TD class="style10">Integer</TD>
+      <TD class="style7">0</TD>
+      <TD class="style8">mRegisteredToID</TD>
+      <TD class="style9">For an imported map, ID of map that it was registered to for 
+        transforming</TD>
+    </TR>
+    <TR VALIGN="top">
       <TD>SuperMontXY</TD>
       <TD class="style10">Two Integers</TD>
       <TD class="style7">-1,-1</TD>
@@ -502,6 +510,14 @@
       <TD class="style8">mPieceDrawnOn</TD>
       <TD class="style9">Index of montage piece item was drawn on (piece_#_in_X * 
         #_of_pieces_in_Y + piece_#_in_Y)</TD>
+    </TR>
+    <TR VALIGN="top">
+      <TD>XYinPc</TD>
+      <TD class="style10">Two Floats</TD>
+      <TD class="style7">-1,-1</TD>
+      <TD class="style8">mX/YinPiece</TD>
+      <TD class="style9">X,Y coordinates in the montage piece, in right-handed pixels of 
+        stored montage</TD>
     </TR>
     <TR VALIGN="top">
       <TD>MapFile</TD>
